Fixes wonky box-shadow display on safari

--- a/index.css
+++ b/index.css
@@ -73,6 +73,7 @@ p {
 	display: flex;
 	justify-content: center;
 	box-shadow: 1px 2px 20px black;
+	width: 100%;
 }
 
 #logo {
